--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "postinstall": "node build.js --compile-js && node build.js --compile-css && npm run build:com_media",
     "update": "node build.js --copy-assets && node build.js --build-pages && node build.js --compile-js && node build.js --compile-css",
     "gzip": "node -e 'require(\"./build/build-modules-js/gzip-assets.es6.js\").gzipFiles()'",
-    "watch:com_media": "cross-env NODE_ENV=development webpack --progress --hide-modules --watch --config administrator/components/com_media/webpack.config.js",
-    "dev:com_media": "cross-env NODE_ENV=development webpack --progress --hide-modules --config administrator/components/com_media/webpack.config.js",
-    "build:com_media": "cross-env NODE_ENV=production webpack --progress --hide-modules --config administrator/components/com_media/webpack.config.js"
+    "build:com_media": "rollup --config administrator/components/com_media/rollup.config.js"
   },
   "browserslist": [
     "last 1 version",
@@ -68,6 +66,9 @@
     "@babel/preset-env": "^7.9.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@gfx/zopfli": "^1.0.14",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.1",
     "autoprefixer": "^9.7.5",
     "babel-loader": "^8.1.0",
     "babel-plugin-add-header-comment": "^1.0.3",
@@ -101,16 +102,16 @@
     "path": "^0.12.7",
     "postcss": "^7.0.27",
     "recursive-readdir": "^2.2.2",
+    "rollup": "2.3.2",
+    "rollup-plugin-vue": "5.1.6",
+    "rollup-plugin-vue-template-compiler": "^1.0.3",
     "sass-loader": "^8.0.2",
     "selenium-standalone": "^6.17.0",
     "uglify-es": "^3.3.9",
     "uglifycss": "^0.0.29",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.10",
-    "vueify": "^9.4.1",
     "walk-sync": "^2.0.2",
-    "watch": "^1.0.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "watch": "^1.0.2"
   }
 }
