--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "diff": "^4.0.2",
     "dragula": "3.7.2",
     "focus-visible": "^5.2.0",
+    "grapesjs": "^0.16.22",
     "joomla-ui-custom-elements": "0.2.0",
     "jquery": "^3.6.0",
     "jquery-migrate": "^3.3.2",
