--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,8 @@
         "ext-simplexml": "*",
         "psr/log": "~1.0",
         "ext-gd": "*",
-        "web-auth/webauthn-lib": "2.1.*"
+        "web-auth/webauthn-lib": "2.1.*",
+        "vlucas/phpdotenv": "^5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.0",
